делает блок промо

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -44,6 +44,8 @@
     position: absolute;
     right: 0;
     bottom: -150px;
+    width: 288px;
+    height: 494px;
 
     @include vp-1199 {
       bottom: -125px;
