--- a/source/sass/blocks/advertising.scss
+++ b/source/sass/blocks/advertising.scss
@@ -3,11 +3,11 @@
   padding: 120px 0;
 
   @include vp-1199 {
-    padding: 100px 0;
+    padding: 100px 45px;
   }
 
   @include vp-767 {
-    padding: 70px 0;
+    padding: 70px 15px;
   }
 }
 
@@ -15,20 +15,105 @@
   max-width: 1160px;
   margin: 0 auto;
   display: flex;
+  justify-content: center;
+
+  @include vp-767 {
+    flex-direction: column;
+  }
+}
+
+.advertising__wrapper-img {
+  width: 660px;
+
+  @include vp-1199 {
+    width: 386px;
+  }
+
+  @include vp-767 {
+    width: 292px;
+  }
+
+  & img {
+    @include vp-1199 {
+      aspect-ratio: 386/292;
+    }
+
+    @include vp-767 {
+      aspect-ratio: 290/292;
+    }
+  }
 }
 
 .advertising__wrapper-desc {
   background: #ed0233;
-  width: 100%;
+  width: 43%;
   display: flex;
   flex-direction: column;
-  padding: 85px 78px;
+  padding: 80px 78px;
+
+  @include vp-1199 {
+    padding: 47px 45px;
+  }
+
+  @include vp-767 {
+    width: 100%;
+  }
+
+  & span {
+    font-family: $ff-roboto;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 150%;
+    color: #ffffff;
+    margin-bottom: 45px;
+
+    @include vp-1199 {
+      font-size: 12px;
+      margin-bottom: 27px;
+    }
+  }
+
+  & a {
+    font-family: $ff-roboto;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #ffffff;
+    text-align: center;
+    border: 4px solid #ffffff;
+    padding: 25px;
+
+    &:hover,
+    &:focus {
+      background: linear-gradient(97.05deg, #ed0233 17.6%, #003eb7 95.31%);
+      color: #d6c5c5;
+    }
+
+    @include vp-1199 {
+      font-size: 10px;
+      line-height: 12px;
+      padding: 12px;
+    }
+  }
 }
 
 .advertising__desc {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 50px;
+  gap: 59px;
+  margin-bottom: 10px;
+
+  @include vp-1199 {
+    margin-bottom: 0;
+  }
+
+  @include vp-1199 {
+    gap: 34px;
+  }
 
   & h2 {
     font-family: $ff-alumni;
@@ -38,14 +123,25 @@
     line-height: 96%;
     letter-spacing: 0.03em;
     color: #ffffff;
-    margin: 0;
     text-transform: uppercase;
+    margin: 6px 0 0 13px;
+
+    @include vp-1199 {
+      font-size: 48px;
+      line-height: 96%;
+      margin: 5px 0 0 7px;
+    }
   }
 }
 
 .advertising__data-time-wrapper {
-  display: grid;
-  grid-template-rows: 1fr 1fr;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+  @include vp-1199 {
+    gap: 0;
+  }
 }
 
 .advertising__data-wrapper {
@@ -53,11 +149,121 @@
   flex-direction: column;
 
   & h3 {
+    position: relative;
     font-family: $ff-roboto;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 150%;
     color: #ffffff;
+    margin: 0;
+
+    @include vp-1199 {
+      font-size: 12px;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 70%;
+      height: 1px;
+      left: 0;
+      bottom: -6px;
+      border: 1px solid #ffffff;
+
+      @include vp-1199 {
+        bottom: -3px;
+        width: 42px;
+      }
+    }
+  }
+}
+
+.advertising__data {
+  display: flex;
+  align-items: center;
+  gap: 7px;
+
+  @include vp-1199 {
+    gap: 4px;
+  }
+
+  & span {
+    font-family: $ff-roboto;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 150%;
+    color: #ffffff;
+    margin: 0;
+
+    @include vp-1199 {
+      font-size: 24px;
+    }
+  }
+}
+
+.advertising__month-year {
+  display: flex;
+  flex-direction: column;
+
+  & span {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    margin: 0;
+
+    @include vp-1199 {
+      font-size: 10px;
+    }
+  }
+}
+
+.advertising__time-wrapper {
+  display: flex;
+  flex-direction: column;
+
+  & h3 {
+    position: relative;
+    font-family: $ff-roboto;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 150%;
+    color: #ffffff;
+    margin: 0;
+
+    @include vp-1199 {
+      font-size: 12px;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 95%;
+      height: 1px;
+      left: 0;
+      bottom: -6px;
+      border: 1px solid #ffffff;
+
+      @include vp-1199 {
+        bottom: -3px;
+        width: 56px;
+      }
+    }
+  }
+
+  & p {
+    font-family: $ff-roboto;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 150%;
+    color: #ffffff;
+    margin: 0;
+
+    @include vp-1199 {
+      font-size: 24px;
+    }
   }
 }
