--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,7 +4,7 @@
 @import "vendor/normalize";
 @import "vendor/data-tabs.scss";
 // Swiper 7.4.1
-// @import "vendor/swiper";
+@import "vendor/swiper";
 
 // Global
 // ---------------------------------
@@ -28,6 +28,7 @@
 @import "blocks/main.scss";
 @import "blocks/catalog.scss";
 @import "blocks/advertising.scss";
+@import "blocks/coaches.scss";
 
 
 // ---------------------------------
