--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -37,6 +37,8 @@
 .coaches__wrapper-list {
   position: relative;
   display: flex;
+  margin: 0;
+  padding: 0;
 
   & button {
     position: absolute;
@@ -55,12 +57,10 @@
 }
 
 .coaches__list {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  display: flex;
   margin: 0;
   padding: 0;
-  gap: 40px;
-
+  
   @include vp-1199 {
     grid-template-columns: repeat(2, 1fr);
   }
