делает блок с преимуществами

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -141,7 +141,7 @@
   padding: 0;
   margin: 0 auto;
   display: grid;
-  align-items: center;
+  text-align: center;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 40px;
   width: 100%;
