--- a/source/sass/blocks/advertising.scss
+++ b/source/sass/blocks/advertising.scss
@@ -30,7 +30,7 @@
   }
 
   @include vp-767 {
-    width: 292px;
+    width: 100%;
   }
 
   & img {
@@ -40,6 +40,7 @@
 
     @include vp-767 {
       aspect-ratio: 290/292;
+      width: 100%;
     }
   }
 }
