--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -1,13 +1,18 @@
 .coaches {
   padding: 70px;
+
+  @include vp-767 {
+    padding: 30px;
+  }
 }
 
 .coaches__wrapper {
-  max-width: 1160px;
+  max-width: 320px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
 
   @include vp-1199 {
     align-items: center;
@@ -35,39 +40,16 @@
 }
 
 .coaches__wrapper-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.coaches__list {
   position: relative;
   display: flex;
   margin: 0;
   padding: 0;
-
-  & button {
-    position: absolute;
-    border: none;
-    background-color: transparent;
-    top: 50%;
-    left: -40px;
-    height: 100%;
-    width: 40px;
-    transform: translate(-50%, -50%);
-
-    &:nth-child(n+2) {
-      left: 103%;
-    }
-  }
-}
-
-.coaches__list {
-  display: flex;
-  margin: 0;
-  padding: 0;
-  
-  @include vp-1199 {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  @include vp-767 {
-    grid-template-columns: 1fr;
-  }
 }
 
 .coaches__item {
