--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -29,7 +29,7 @@
 @import "blocks/catalog.scss";
 @import "blocks/advertising.scss";
 @import "blocks/coaches.scss";
-
+@import "blocks/advantages.scss";
 
 // ---------------------------------
 
