--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,14 +1,15 @@
 .advantages {
   background: #f8f9fc;
-  padding: 87px 103px 130px;
+  padding: 53px 103px 138px;
 
 
   @include vp-1199 {
-    padding: 25px 45px;
+    padding: 45px 45px 95px;
   }
 
   @include vp-767 {
     padding: 15px;
+    padding-bottom: 62px;
   }
 }
 
