--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -1,5 +1,11 @@
 .coaches {
-  padding: 70px;
+  padding: 206px;
+
+
+  @include vp-1199 {
+    padding: 60px;
+  }
+
 
   @include vp-767 {
     padding: 30px;
