--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,6 +30,7 @@
 @import "blocks/advertising.scss";
 @import "blocks/coaches.scss";
 @import "blocks/advantages.scss";
+@import "blocks/promo.scss";
 
 // ---------------------------------
 
