--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -31,7 +31,10 @@
 @import "blocks/coaches.scss";
 @import "blocks/advantages.scss";
 @import "blocks/promo.scss";
-
+@import "blocks/form-contacts.scss";
+@import "blocks/reviews.scss";
+@import "blocks/footer.scss";
+@import "blocks/social.scss";
 // ---------------------------------
 
 // ❗❗❗ запрещено использовать изображения в css, касается как jpg \ png, так и svg
