--- a/source/sass/blocks/advertising.scss
+++ b/source/sass/blocks/advertising.scss
@@ -1,6 +1,6 @@
 .advertising {
   position: relative;
-  padding: 120px 0;
+  padding: 120px 0 60px;
 
   @include vp-1199 {
     padding: 100px 45px;
