--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -3,12 +3,12 @@
 
 
   @include vp-1199 {
-    padding: 60px;
+    padding: 0 30px 100px;
   }
 
 
   @include vp-767 {
-    padding: 30px;
+    padding: 0 0 70px;
   }
 }
 
@@ -16,6 +16,15 @@
   max-width: 1500px;
   padding: 0 70px;
   position: relative;
+
+
+  @include vp-1199 {
+    width: 100%;
+  }
+
+  @include vp-767 {
+    padding: 0 47px;
+  }
 }
 
 .coaches__wrapper {
@@ -45,11 +54,13 @@
       font-size: 42px;
       line-height: 50px;
       width: auto;
+      margin: 2px auto 30px;
     }
 
     @include vp-767 {
       font-size: 32px;
       line-height: 38px;
+      margin: 15px auto 42px;
     }
   }
 }
@@ -74,6 +85,17 @@
   margin: 0;
   padding: 0;
 
+  & img {
+    @include vp-1199 {
+      aspect-ratio: 268/294;
+      width: 100%;
+    }
+
+    @include vp-767 {
+      aspect-ratio: 226/274;
+    }
+  }
+
   & h3 {
     position: absolute;
     bottom: 10px;
@@ -95,8 +117,12 @@
 
   & h3 {
     margin: 0;
-    top: 0;
-    transform: translate(-50%, 18%);
+    top: 50px;
+    transform: translate(-50%, 0);
+
+    @include vp-767 {
+      top: 40px;
+    }
   }
 
   .coaches__card {
@@ -110,6 +136,10 @@
     height: 100%;
     top: 0;
 
+    @include vp-767 {
+      padding: 65px 25px 10px 30px;
+    }
+
     & span {
       font-style: normal;
       font-weight: 400;
@@ -119,6 +149,10 @@
       text-align: center;
       margin-right: 15px;
       margin-bottom: 33px;
+
+      @include vp-767 {
+        margin-right: 5px;
+      }
     }
 
     .coaches__card-item {
