--- a/source/sass/blocks/form-contacts.scss
+++ b/source/sass/blocks/form-contacts.scss
@@ -35,6 +35,8 @@
     @include vp-1199 {
       gap: 58px;
       row-gap: 16px;
+      margin: 0 auto;
+      max-width: 480px;
     }
 
     @include vp-767 {
@@ -170,11 +172,12 @@
   column-gap: 65px;
   padding-left: 4px;
   row-gap: 20px;
-  max-width: 410px;
+  max-width: 445px;
 
   @include vp-1199 {
     padding: 0;
     column-gap: 32px;
+    max-width: 100%;
   }
 
   @include vp-767 {
