--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -169,8 +169,8 @@
   font-family: $ff-roboto;
   font-style: normal;
   font-weight: 400;
-  font-size: 12px;
-  line-height: 21px;
+  font-size: 14px;
+  line-height: 150%;
   text-align: right;
   color: #ffffff;
 }
@@ -196,21 +196,20 @@
     font-family: $ff-alumni;
     font-style: normal;
     font-weight: 600;
-    font-size: 42px;
+    font-size: 48px;
     line-height: 58px;
     letter-spacing: 0.03em;
     color: #ffffff;
-    text-transform: uppercase;
     margin: 0 53px 0 0;
 
     @include vp-1199 {
-      font-size: 30px;
+      font-size: 34px;
       line-height: 41px;
       margin: 51px 7px 6px 0;
     }
 
     @include vp-767 {
-      font-size: 24px;
+      font-size: 28px;
       line-height: 34px;
       margin: 51px 5px 12px 0;
     }
@@ -249,7 +248,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
+    letter-spacing: 0.05em;
     text-transform: uppercase;
     color: #ffffff;
     border: 4px solid #ffffff;
@@ -265,8 +264,6 @@
     }
 
     @include vp-1199 {
-      font-size: 11px;
-      line-height: 14px;
       margin: 0;
       min-width: auto;
       padding: 20px 33px;
