--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -2,11 +2,11 @@
   padding: 55px;
 
   @include vp-1199 {
-    padding: 91px 45px;
+    padding: 91px 45px 40px;
   }
 
   @include vp-767 {
-    padding: 55px 15px;
+    padding: 55px 15px 40px;
   }
 }
 
