--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,11 +1,140 @@
 .reviews {
-  height: 526px;
+  padding: 17px 20px 120px;
+
+  & h2 {
+    text-align: center;
+    font-family: $ff-alumni;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 54px;
+    line-height: 65px;
+    letter-spacing: 0.03em;
+    color: #102654;
+    margin-bottom: 36px;
+
+    @include vp-1199 {
+      font-size: 42px;
+      line-height: 50px;
+      margin-bottom: 40px;
+    }
+
+    @include vp-767 {
+      font-size: 32px;
+      line-height: 38px;
+      margin: 7px 0 42px;
+    }
+  }
 
   @include vp-1199 {
-    height: 434px;
+    padding: 17px 20px 100px;
   }
 
   @include vp-767 {
-    height: 494px;
+    padding: 17px 0 70px;
+  }
+}
+
+.reviews__wrapper {
+  position: relative;
+  max-width: 1160px;
+  margin: 0 auto;
+
+
+  @include vp-767 {
+    padding: 0 47px;
+  }
+}
+
+.reviews__list {
+  max-width: 560px;
+
+  @include vp-767 {
+    max-width: 226px;
+  }
+}
+
+.reviews__item {
+  display: grid;
+  grid-template-columns: auto auto;
+  background: #1c3374;
+  box-shadow: 0 0 40px rgba(28, 51, 116, 0.2);
+  padding: 55px 62px;
+  gap: 27px;
+  row-gap: 14px;
+
+  & h3 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 150%;
+    color: #ffffff;
+    margin: 0;
+
+    @include vp-767 {
+      line-height: 130%;
+      margin: auto;
+    }
+  }
+
+  & p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
+    color: #ffffff;
+    margin: 0;
+
+    @include vp-767 {
+      grid-column: 1/3;
+      text-align: center;
+    }
+  }
+
+  @include vp-767 {
+    padding: 40px 25px 33px;
+    gap: 15px;
+  }
+}
+
+.reviews__img-wrapper {
+  grid-row: 1/3;
+
+  @include vp-767 {
+    grid-row: 1/1;
+    width: 68px;
+    height: 68px;
+  }
+
+  & img {
+    padding-top: 8px;
+
+    @include vp-767 {
+      padding: 0;
+      margin-left: 16px;
+    }
+  }
+}
+
+.reviews__button--prev.swiper-button-prev {
+  left: 243px;
+
+  @include vp-1199 {
+    left: 25px;
+  }
+
+  @include vp-767 {
+    left: 15px;
+  }
+}
+
+.reviews__button.swiper-button-next {
+  right: 243px;
+
+  @include vp-1199 {
+    right: 25px;
+  }
+
+  @include vp-767 {
+    right: 15px;
   }
 }
