--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -38,6 +38,7 @@ a {
   color: $color-default-black;
   text-decoration: none;
   cursor: pointer;
+  user-select: none;
 }
 
 img,
@@ -127,4 +128,5 @@ button,
 [type="reset"],
 [type="submit"] {
   appearance: none;
+  user-select: none;
 }
