--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -51,7 +51,6 @@
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   column-gap: 60px;
-  row-gap: 153px;
   padding: 0;
 
   @include vp-1199 {
@@ -67,55 +66,31 @@
     flex-direction: column;
     align-items: center;
   }
-
-  &::before {
-    content: "";
-    position: absolute;
-    width: 340px;
-    height: 0;
-    left: 0;
-    top: 50%;
-    border: 2px solid rgba(209, 10, 66, 0.2);
-
-    @include vp-1199 {
-      display: none;
-    }
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    width: 340px;
-    height: 0;
-    right: 0;
-    top: 50%;
-    border: 2px solid rgba(209, 10, 66, 0.2);
-
-    @include vp-1199 {
-      display: none;
-    }
-  }
 }
 
 .advantages__item-number {
-  font-family: $ff-roboto;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 71px;
-  line-height: 60px;
   display: flex;
   flex-direction: column;
-  background: linear-gradient(127.61deg, #d10a42 0%, #0041ca 45.58%);
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-
-  @include vp-1199 {
-    font-size: 58px;
-    line-height: 50px;
-  }
 
   @include vp-767 {
     align-items: center;
+  }
+
+  & p {
+    font-family: $ff-roboto;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 71px;
+    line-height: 60px;
+    background: linear-gradient(142.51deg, #d10a42 0%, #0041ca 87.33%);
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    margin: 0;
+
+    @include vp-1199 {
+      font-size: 58px;
+      line-height: 50px;
+    }
   }
 
   & span {
@@ -128,12 +103,20 @@
   }
 }
 
+.advantages__item-number--color p {
+  background: linear-gradient(127.61deg, #d10a42 0%, #0041ca 45.58%);
+  color: transparent;
+  background-clip: text;
+}
+
 .advantages__item {
   display: flex;
   gap: 30px;
+  padding: 75px 0 0;
 
   @include vp-1199 {
     align-items: center;
+    padding: 0;
   }
 
   @include vp-767 {
@@ -144,80 +127,81 @@
   }
 
   &:nth-child(3n+1) {
-    margin-left: 20px;
+    padding-left: 20px;
 
     @include vp-1199 {
-      margin-left: 0;
-    }
-  }
-
-  &:nth-child(3n) {
-    grid-column: 2/3;
-    grid-row: 1/3;
-    flex-direction: column;
-    background: #1c3374;
-    padding: 60px 34px;
-    align-items: center;
-    width: 240px;
-    gap: 10px;
-    margin: auto;
-
-    @include vp-1199 {
-      grid-row: 2/3;
-      grid-column: 1/3;
-      width: 442px;
-      padding: 45px 125px 40px;
-    }
-
-    @include vp-767 {
-      width: 100vw;
-      margin: 2px auto;
-      padding: 48px 10px 45px;
-    }
-
-    & .advantages__item-text {
-      align-items: center;
-      gap: 32px;
-
-      @include vp-1199 {
-        gap: 15px;
-      }
-
-      @include vp-767 {
-        gap: 10px;
-      }
-
-      & h3 {
-        font-style: normal;
-        font-weight: 700;
-        font-size: 26px;
-        line-height: 150%;
-        color: #ffffff;
-
-        @include vp-1199 {
-          font-size: 22px;
-        }
-      }
-
-      & p {
-        font-style: normal;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 150%;
-        color: #ffffff;
-        text-align: center;
-      }
-    }
-
-    & .advantages__item-number {
-      font-style: normal;
-      font-weight: 700;
-      font-size: 74px;
-      -webkit-text-fill-color: #ffffff;
-      color: #ffffff;
+      padding-left: 0;
     }
   }
 }
+
+.advantages__item--center {
+  grid-column: 2/3;
+  grid-row: 1/3;
+  flex-direction: column;
+  background: #1c3374;
+  padding: 60px 34px;
+  align-items: center;
+  width: 240px;
+  gap: 10px;
+  margin: auto;
+
+  & p {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 74px;
+    -webkit-text-fill-color: #ffffff;
+    color: #ffffff;
+  }
+
+  @include vp-1199 {
+    grid-row: 2/3;
+    grid-column: 1/3;
+    width: 442px;
+    padding: 45px 125px 40px;
+  }
+
+  @include vp-767 {
+    width: 100vw;
+    margin: 2px auto;
+    padding: 48px 10px 45px;
+  }
+
+  & .advantages__item-text {
+    align-items: center;
+    gap: 32px;
+
+    @include vp-1199 {
+      gap: 15px;
+    }
+
+    @include vp-767 {
+      gap: 10px;
+    }
+
+    & h3 {
+      font-style: normal;
+      font-weight: 700;
+      font-size: 26px;
+      line-height: 150%;
+      color: #ffffff;
+
+      @include vp-1199 {
+        font-size: 22px;
+      }
+    }
+
+    & p {
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 150%;
+      color: #ffffff;
+      text-align: center;
+    }
+  }
+}
+
 
 .advantages__item-text {
   display: flex;
@@ -256,5 +240,16 @@
       text-align: center;
       width: 71%;
     }
+  }
+}
+
+.advantages__item--border {
+  border-bottom: 2px solid rgba(209, 10, 66, 0.2);
+  width: 100%;
+  padding: 0 0 78px;
+
+  @include vp-1199 {
+    border: none;
+    padding: 0;
   }
 }
