--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -8,7 +8,7 @@
   }
 
   @include vp-767 {
-    padding: 70px 0;
+    padding: 65px 0 70px;
   }
 }
 
@@ -230,6 +230,7 @@
     color: #102654;
     outline: 2px solid #102654;
     padding: 27px 44px;
+    max-width: 206px;
 
     @include vp-1199 {
       padding: 24px 44px;
