--- a/source/sass/blocks/form-contacts.scss
+++ b/source/sass/blocks/form-contacts.scss
@@ -122,11 +122,13 @@
   border-top: 1px solid #74819c;
 
   @include vp-1199 {
-    padding: 61px 133px;
+    padding: 61px;
+    margin: 0 auto;
   }
 
   @include vp-767 {
     padding: 66px 15px 62px;
+    margin: 0;
   }
 
   & h2 {
@@ -137,18 +139,18 @@
     line-height: 65px;
     letter-spacing: 0.03em;
     color: #102654;
-    margin: 0;
-    margin-bottom: 37px;
+    margin: 0 0 37px 0;
 
     @include vp-1199 {
       font-size: 42px;
       line-height: 50px;
-      margin-bottom: 32px;
+      margin: 0 0 32px 30px;
     }
 
     @include vp-767 {
       font-size: 32px;
       line-height: 38px;
+      margin: 0 0 32px 0;
     }
   }
 }
@@ -161,6 +163,8 @@
 .form-contacts__input.is-valid input {
   outline: 2px solid #66b15f;
   border-radius: 4px;
+  box-shadow: inset 0 0 0 50px #102654;
+  -webkit-text-fill-color: #ffffff;
 }
 
 .form-contacts__contacts-list {
@@ -171,13 +175,15 @@
   grid-template-columns: 1.5fr 1fr;
   column-gap: 65px;
   padding-left: 4px;
-  row-gap: 20px;
+  row-gap: 15px;
   max-width: 445px;
 
   @include vp-1199 {
     padding: 0;
-    column-gap: 32px;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 70px;
     max-width: 100%;
+    row-gap: 20px;
   }
 
   @include vp-767 {
@@ -206,7 +212,13 @@
   padding: 0;
   list-style: none;
 
+  @include vp-1199 {
+    margin-left: 30px;
+  }
+
   @include vp-767 {
+    margin: 0;
+
     &:nth-child(2n) {
       order: 4;
     }
@@ -234,6 +246,24 @@
     line-height: 21px;
     color: #102654;
     margin: 0;
+
+    @include vp-1199 {
+      font-size: 18px;
+      line-height: 27px;
+    }
+  }
+
+  & a {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    color: #102654;
+    margin: 0;
+
+    &:hover {
+      color: #007aff;
+    }
 
     @include vp-1199 {
       font-size: 18px;
