--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -68,7 +68,7 @@
   }
 }
 
-.header__link {
+.header__links {
   display: flex;
   gap: 20px;
   flex-direction: column;
@@ -121,7 +121,6 @@
 
   @include vp-767 {
     padding-bottom: 63px;
-    justify-content: end;
   }
 
   & img {
@@ -161,6 +160,7 @@
     top: 194px;
     left: 0;
     padding: 0;
+    right: 60%;
   }
 }
 
@@ -256,6 +256,7 @@
     margin-top: 31px;
     min-width: 230px;
     margin-left: 25px;
+    text-align: center;
 
     &:hover,
     &:focus {
@@ -272,6 +273,7 @@
 
     @include vp-767 {
       margin: 0;
+      min-width: 50vw;
     }
   }
 }
