--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,28 +1,6 @@
 .promo {
   padding: 55px;
 
-  @include vp-1199 {
-    padding: 91px 45px 40px;
-  }
-
-  @include vp-767 {
-    padding: 55px 15px 40px;
-  }
-}
-
-.promo__wrapper {
-  max-width: 1160px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  column-gap: 40px;
-
-  @include vp-1199 {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-  }
-
   & h2 {
     grid-column: 1/3;
     text-align: center;
@@ -38,26 +16,57 @@
     @include vp-1199 {
       font-size: 42px;
       line-height: 50px;
-      margin: 0 10px 10px 0;
+      margin: 0 10px 40px 0;
     }
 
     @include vp-767 {
       font-size: 32px;
       line-height: 38px;
-      margin: 10px 5px 10px 0;
+      margin: 10px 5px 40px 0;
     }
+  }
+
+  @include vp-1199 {
+    padding: 91px 45px 40px;
+  }
+
+  @include vp-767 {
+    padding: 55px 15px 40px;
+  }
+}
+
+.promo__wrapper {
+  max-width: 1160px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
+  grid-template-rows: auto auto;
+
+  @include vp-1199 {
+    gap: 30px;
+  }
+
+  @include vp-767 {
+    display: flex;
+    flex-direction: column;
   }
 }
 
 .promo__year-wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-row: 1/3;
 
   & img {
+    height: 100%;
+    object-fit: cover;
+
     @include vp-1199 {
       width: 100%;
       aspect-ratio: 399/462;
       min-width: 399px;
+      height: auto;
     }
 
     @include vp-767 {
@@ -68,24 +77,28 @@
 
   @include vp-1199 {
     grid-template-columns: auto auto;
+    grid-row: 1/1;
+    grid-column: 1/3;
   }
 
   @include vp-767 {
     grid-template-columns: auto;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: auto 1fr;
   }
 }
 
 .promo__year {
   background: #ed0233;
-  padding: 40px 45px;
-  position: relative;
+  padding: 40px 45px 45px;
+  display: flex;
+  flex-direction: column;
 
   @include vp-1199 {
     width: 100%;
   }
 
   @include vp-767 {
+    align-items: center;
     text-align: center;
   }
 
@@ -116,7 +129,7 @@
     color: #ffffff;
 
     @include vp-767 {
-      margin: 15px 0;
+      margin: 15px 0 27px;
     }
   }
 
@@ -130,12 +143,12 @@
     color: #ffffff;
     border-bottom: 1px solid #ffffff;
     margin-top: auto;
-    position: absolute;
+    width: fit-content;
     bottom: 45px;
 
-    @include vp-767 {
-      left: 50%;
-      transform: translate(-50%);
+    &:hover {
+      color: #e2bebe;
+      border-bottom: 1px solid #e2bebe;
     }
   }
 }
@@ -165,11 +178,15 @@
   border-image-slice: 1;
   box-sizing: border-box;
   color: #1c3374;
-  padding: 18px 27px;
+  padding: 18px 27px 28px;
+  display: flex;
+  flex-direction: column;
+  min-height: 211px;
 
   @include vp-767 {
     text-align: center;
-    padding: 30px 27px 46px;
+    padding: 30px 27px 40px;
+    align-items: center;
   }
 
   & h3 {
@@ -185,15 +202,14 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 26px;
-    margin: 0 0 70px 0;
+    margin: 0;
 
     @include vp-767 {
-      margin: 0 0 30px 0;
+      margin: 0 0 20px 0;
     }
   }
 
   & a {
-    position: absolute;
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
@@ -202,12 +218,16 @@
     text-transform: uppercase;
     color: #1c3374;
     border-bottom: 1px solid #1c3374;
-    bottom: 30px;
+    width: fit-content;
+    margin-top: auto;
+
+    &:hover {
+      color: #007aff;
+      border-bottom: 1px solid #007aff;
+    }
 
     @include vp-767 {
-      bottom: 40px;
-      left: 50%;
-      transform: translate(-50%);
+      transform: none;
     }
   }
 }
