--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -48,8 +48,12 @@
 .reviews__list {
   max-width: 560px;
 
+  @include vp-1199 {
+    max-width: calc(100% - 169px);
+  }
+
   @include vp-767 {
-    max-width: 226px;
+    max-width: 560px;
   }
 }
 
@@ -72,7 +76,7 @@
 
     @include vp-767 {
       line-height: 130%;
-      margin: auto;
+      margin: auto auto auto 16px;
     }
   }
 
@@ -83,6 +87,7 @@
     line-height: 140%;
     color: #ffffff;
     margin: 0;
+    grid-column: 2/3;
 
     @include vp-767 {
       grid-column: 1/3;
@@ -93,6 +98,7 @@
   @include vp-767 {
     padding: 40px 25px 33px;
     gap: 15px;
+    grid-template-columns: 1fr 4fr;
   }
 }
 
