--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -23,7 +23,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 5px;
+    padding: 10px;
+    margin: 0;
 
     &:hover {
       opacity: 0.5;
